--- a/vignettes/v1auditWorkflow.Rmd
+++ b/vignettes/v1auditWorkflow.Rmd
@@ -30,9 +30,9 @@ data("BuildIt")
 In statistical terms, Laura wants to make a statement that, with 95% confidence, the maximum error in the financial statements is lower than what is considered *material*. She therefore determines that *materiality*, the maximum tolerable error in the financial statements, as 5%. Based on last year's audit at BuildIt, where the maximum error turned out to be 2.5%, she expects at most 2.5% errors in the sample that she will inspect. Laura can therefore re-formulate her statistical statement as that she wants to conclude that, when 2.5% errors are found in her sample, she can conclude with 95% confidence, that the misstatement in the population is lower than the materiality of 5%. Below, Laura defines the materiality, confidence, and expected errors.
 
 ```{r}
-# Specify the materiality, confidence, and expected errors.
-materiality   <- 0.05   # 5%
+# Specify the confidence, materiality, and expected errors.
 confidence    <- 0.95   # 95%
+materiality   <- 0.05   # 5%
 expectedError <- 0.025  # 2.5%
 ```
 
@@ -61,35 +61,35 @@ In a Bayesian audit, Laura starts at step 0 by defining the prior distribution t
 
 ```{r}
 # Step 0: Create a prior distribution according to the audit risk model.
-priorResult <- auditPrior(confidence = confidence, likelihood = "binomial", method = "arm", expectedError = expectedError, materiality = materiality, ir = ir, cr = cr)
+prior <- auditPrior(confidence, materiality, expectedError, method = "arm", likelihood = "binomial", ir = ir, cr = cr)
 ```
 
 Laura can inspect the resulting prior distribution with the `print()` function.
 
 ```{r}
-print(priorResult)
+print(prior)
 ```
 
 The prior distribution can be shown by using the `plot()` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
-plot(priorResult)
+plot(prior)
 ```
 
 Now that the prior distribution is specified, Laura can calculate the required sample size for her desired statement by using the `planning()` function. She uses the `priorResult` object as input for the `planning()` function to use her prior distribution.
 
 ```{r}
 # Step 1: Calculate the required sample size.
-planningResult <- planning(confidence = confidence, expectedError = expectedError, materiality = materiality, prior = priorResult)
+planningResult <- planning(confidence, materiality, expectedError = expectedError, prior = prior)
 ```
 
-Laura can then inspect the result from her planning procedure by using the `print()` function. Her result tells her that, given her prior distribution she needs to audit a sample of 169 transactions so that, when at most 4.23 errors are found, she can conclude with 95% confidence that the maximum error in BuildIt's financial statements is lower the materiality of 5%. 
+Laura can then inspect the result from her planning procedure by using the `print()` function. Her result tells her that, given her prior distribution she needs to audit a sample of 169 transactions so that, when at most 4.225 errors are found, she can conclude with 95% confidence that the maximum error in BuildIt's financial statements is lower the materiality of 5%. 
 
 ```{r}
 print(planningResult)
 ```
 
-Laura can inspect how the prior distribution compares to the expected posterior distribution by using the `plot()` function. The expected posterior distribution is the posterior distribution that would occur if Laura actually observed a sample of 169 transactions, from which 4.223 were in error.
+Laura can inspect how the prior distribution compares to the expected posterior distribution by using the `plot()` function. The expected posterior distribution is the posterior distribution that would occur if Laura actually observed a sample of 169 transactions, from which 4.225 were in error.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(planningResult)
@@ -103,7 +103,7 @@ Laura chooses to use *monetary unit sampling*, as she wants to include more high
 
 ```{r}
 # Step 2: Draw a sample from the financial statements.
-samplingResult <- selection(population = BuildIt, sampleSize = planningResult, units = "mus", bookValues = "bookValue", seed = 999)
+samplingResult <- selection(BuildIt, sampleSize = 164, units = "mus", bookValues = "bookValue")
 ```
 
 Laura can inspect the outcomes of her sampling procedure by using the `print()` function.
@@ -135,16 +135,16 @@ Using her annotated sample, Laura can perform her inference with the `evaluation
 
 ```{r}
 # Step 4: Evaluate the sample.
-evaluationResult <- evaluation(confidence = confidence, sample = sample, materiality = materiality, prior = priorResult, bookValues = "bookValue", auditValues = "auditValue")
+evaluationResult <- evaluation(confidence, materiality, sample = sample, bookValues = "bookValue", auditValues = "auditValue", prior = prior)
 ```
 
-Laura can inspect the outcomes of her inference by using the `print()` function. Her resulting upper bound is 3.518%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
+Laura can inspect the outcomes of her inference by using the `print()` function. Her resulting upper bound is 2.378%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
 
 ```{r}
 print(evaluationResult)
 ```
 
-She can inspect the prior and posterior distribution by using the `plot()` function. The shaded area quantifies the area under the posterior distribution that contains 95% of the probability, which ends at 3.518%. Therefore, Laura can state that there is a 95% probability that the misstatement in BuildIt's statements is lower than 3.518%.
+She can inspect the prior and posterior distribution by using the `plot()` function. The shaded area quantifies the area under the posterior distribution that contains 95% of the probability, which ends at 2.378%. Therefore, Laura can state that there is a 95% probability that the misstatement in BuildIt's statements is lower than 2.378%.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(evaluationResult)
@@ -152,4 +152,4 @@ plot(evaluationResult)
 
 ## Conclusion
 
-Since the 95% upper confidence bound on the misstatement in BuildIt's financial statements is lower than the materiality, Laura can conclude that the financial statements as a whole do not contain material misstatement. Therefore, she can approve BuildIt's financial statements.
+Since the 95% upper confidence bound on the misstatement in population is lower than the performance materiality Laura can conclude that there is less than 5% risk that the population contains material misstatement.
