--- a/doc/jfa.Rmd
+++ b/doc/jfa.Rmd
@@ -46,7 +46,7 @@ BuildIt <- BuildIt[, c("ID", "bookValue")] # Let's remove the auditValue column 
 head(BuildIt, n = 10)
 ```
 
-Because this data set contains the *Ist* values of the transactions, we need to consider each monetary unit in the population as a possible unit of inference.
+Because this data set contains the recorded values of the transactions, we need to consider each monetary unit in the population as a possible unit of inference.
 
 For an example of the `jfa`'s audit sampling workflow see [The audit sampling workflow](https://koenderks.github.io/jfa/articles/v1auditWorkflow.html).
 
@@ -63,7 +63,7 @@ Analysis goal: *Plan a sample such that, when zero misstatements are found in th
 Planning a sample with this goal can be done using the code below (specifically using the `materiality` argument). As you can see, the required sample size for this goal is 60 monetary units.
 
 ```{r}
-planning(confidence = 0.95, expectedError = 0, likelihood = "poisson", N = 3500, materiality = 0.05)
+planning(confidence = 0.95, materiality = 0.05, expectedError = 0, likelihood = "poisson", N = 3500)
 ```
 
 ### Obtaining a minimum required precision
@@ -75,7 +75,7 @@ Analysis goal: *Plan a sample such that, when zero misstatements are found in th
 Planning a sample with this goal can be done using the code below (specifically using the `minPrecision` argument). As you can see, the required sample size for this goal is 150 monetary units.
 
 ```{r}
-planning(confidence = 0.95, expectedError = 0, likelihood = "poisson", N = 3500, minPrecision = 0.02)
+planning(confidence = 0.95, minPrecision = 0.02, expectedError = 0, likelihood = "poisson", N = 3500)
 ```
 
 ## Using `selection()`: The basics
@@ -86,10 +86,10 @@ It also requires knowledge of the sampling algorithm. Transactions can be select
 
 ### Record sampling
 
-For example, the code below samples 60 monetary units from the `BuildIt` data set using a *random record sampling* scheme.
+For example, the code below samples 60 items from the `BuildIt` data set using a *random record sampling* scheme.
 
 ```{r}
-selection(population = BuildIt, sampleSize = 150, units = "records", algorithm = "random")
+selection(population = BuildIt, sampleSize = 60, units = "records", algorithm = "random")
 ```
 
 ### Monetary unit sampling
@@ -115,7 +115,7 @@ head(sample, n = 10)
 
 ## Using `evaluation()`: The basics
 
-After executing the audit and annotating the transactions in the sample with their *Soll* values, you can evaluate whether you have achieved your analysis goal via the `evaluation()` function. The function can be used with summary statistics from the sample, or with an annotated sample as input. 
+After executing the audit and annotating the transactions in the sample with their audit values, you can evaluate whether you have achieved your analysis goal via the `evaluation()` function. The function can be used with summary statistics from the sample, or with an annotated sample as input. 
 
 For more details on how to use this function see the package vignettes: [Estimating the misstatement](https://koenderks.github.io/jfa/articles/v3estimation.html) and [Testing the misstatement](https://koenderks.github.io/jfa/articles/v4testing.html)
 
@@ -124,12 +124,12 @@ For more details on how to use this function see the package vignettes: [Estimat
 Suppose that in 60 transactions, you have found 1 misstatement. Using `nSumstats = 60` and `kSumstats = 1` you can specify the outcomes of the sample in the `evaluation()` function. Do not forget to specify your analysis goal using the `materiality` or `minPrecision` arguments.
 
 ```{r}
-evaluation(confidence = 0.95, method = "binomial", N = 3500, nSumstats = 60, kSumstats = 1, materiality = 0.05)
+evaluation(confidence = 0.95,  materiality = 0.05, method = "binomial", N = 3500, nSumstats = 60, kSumstats = 1)
 ```
 
 ### Annotated sample
 
-Suppose that you have audited the transactions in the sample and have found no deviations from the *ist* values. 
+Suppose that you have audited the transactions in the sample and have found no deviations from the recorded values. 
 
 ```{r}
 sample$auditValue <- sample$bookValue
@@ -138,8 +138,8 @@ sample$auditValue <- sample$bookValue
 You can evaluate the annotated sample using the `sample`, `bookValues`, `auditValues`, and `counts` arguments. The code below evaluates the analysis goal using the popular Stringer bound. You can find more information about which methods are implemented on the [home page](https://koenderks.github.io/jfa/).
 
 ```{r}
-evaluation(confidence = 0.95, method = "stringer", N = 3500, materiality = 0.05,
-           sample = sample, bookValues = "bookValue", auditValues = "auditValue", counts = sample$count)
+evaluation(confidence = 0.95, materiality = 0.05, method = "stringer", sample = sample, bookValues = "bookValue", 
+           auditValues = "auditValue", counts = sample$count, N = 3500)
 ```
 
 ## Using `auditPrior()`: Prior probability distributions
