Update get started page

--- a/doc/v4_testing_misstatement.Rmd
+++ b/doc/v4_testing_misstatement.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Testing the misstatement"
+title: "Testing misstatement"
 author: Koen Derks
 date: "last modified: 19-11-2020"
 output: 
   rmarkdown::html_vignette:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Testing the misstatement}
+  %\VignetteIndexEntry{Testing misstatement}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{jfa}
   %\VignetteKeywords{audit, evaluation, jfa, planning, prior}
