--- a/doc/v1_sampling_workflow.Rmd
+++ b/doc/v1_sampling_workflow.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "The audit sampling workflow"
 author: Koen Derks
-date: "last modified: 07-11-2020"
+date: "last modified: 10-05-2021"
 output: 
   rmarkdown::html_vignette:
     toc: true
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteIndexEntry{The audit sampling workflow}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{jfa}
-  %\VignetteKeywords{audit, workflow, sampling}
+  %\VignetteKeywords{audit, sampling, workflow}
   %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
@@ -50,60 +50,30 @@ cr <- 0.6   # 60%
 
 ## Stage 1: Planning an audit sample
 
-Laura can choose to either perform a frequentist analysis, where she uses the increased detection risk as her level of uncertainty, or perform a Bayesian analysis, where she captures the information in the control risk in a prior distribution. For this example, we will show how Laura performs a Bayesian analysis. A frequentist analysis can easily be done through the following functions by setting `prior = FALSE`. In a frequentist audit, Laura immediately starts at step 1 and uses the value `adjustedConfidence` as her new value for `confidence`.
+Laura can choose to either perform a frequentist analysis, where she uses the increased detection risk as her level of uncertainty, or perform a Bayesian analysis, where she captures the information in the control risk in a prior distribution. For this example, we will show how Laura performs a Bayesian analysis. A frequentist analysis can easily be done through the following functions by setting `prior = FALSE`. In a frequentist audit, Laura immediately uses the adjusted confidence to calculate the sample size using the `planning()` function.
 
 ```{r}
 # Adjust the required confidence for a frequentist analysis.
 adjustedConfidence <- 1 - ((1 - confidence) / (ir * cr))
-```
-
-In a Bayesian audit, Laura starts at step 0 by defining the prior distribution that corresponds to her assessment of the control risk. She assumes the likelihood for a sample of $n$ observations, in which $k$ were in error, to be $\text{binomial}(n, k)$. Using the `auditPrior()` function, she can create a prior distribution that incorporates the information in the risk assessments from the *ARM*. For more information on how this is done, see Derks et al. (2019).
-
-```{r}
-# Step 0: Create a prior distribution according to the audit risk model.
-prior <- auditPrior(confidence, materiality, expectedError, method = "arm", likelihood = "binomial", ir = ir, cr = cr)
-```
-
-Laura can inspect the resulting prior distribution with the `print()` function.
-
-```{r}
-print(prior)
-```
-
-The prior distribution can be shown by using the `plot()` function.
-
-```{r fig.align="center", fig.height=4, fig.width=6}
-plot(prior)
-```
-
-Now that the prior distribution is specified, Laura can calculate the required sample size for her desired statement by using the `planning()` function. She uses the `priorResult` object as input for the `planning()` function to use her prior distribution.
-
-```{r}
 # Step 1: Calculate the required sample size.
-planningResult <- planning(confidence, materiality, expectedError = expectedError, prior = prior)
+planningResult <- planning(adjustedConfidence, materiality, expectedError = expectedError)
 ```
 
-Laura can then inspect the result from her planning procedure by using the `print()` function. Her result tells her that, given her prior distribution she needs to audit a sample of 169 transactions so that, when at most 4.225 errors are found, she can conclude with 95% confidence that the maximum error in BuildIt's financial statements is lower the materiality of 5%. 
+Laura can then inspect the result from her planning procedure by using the `print()` function. Her result tells her that, given her prior distribution she needs to audit a sample of 190 transactions so that, when at most 5 errors are found, she can conclude with 91.66% confidence that the maximum error in BuildIt's financial statements is lower the materiality of 5%. 
 
 ```{r}
 print(planningResult)
 ```
 
-Laura can inspect how the prior distribution compares to the expected posterior distribution by using the `plot()` function. The expected posterior distribution is the posterior distribution that would occur if Laura actually observed a sample of 169 transactions, from which 4.225 were in error.
-
-```{r fig.align="center", fig.height=4, fig.width=6}
-plot(planningResult)
-```
-
 ## Stage 2: Selecting a sample
 
-Laura is now ready to select the required 169 transactions from the financial statements. She can choose to do this according to one of two statistical methods. In *record sampling* (`units = "records"`), inclusion probabilities are assigned on the transaction level, treating transactions with a high value and a low value the same, a transaction of $5,000 is equally likely to be selected as a transaction of $1,000. In *monetary unit sampling* (`units = "mus"`), inclusion probabilities are assigned on the level of individual monetary units (e.g., a dollar). When a dollar is selected to be in the sample, the transaction that includes that dollar is selected. This favors higher transactions, as a transaction of \$5,000 is five times more likely to be selected than a transaction of \$1,000. 
+Laura is now ready to select the required 190 transactions from the financial statements. She can choose to do this according to one of two statistical methods. In *record sampling* (`units = "records"`), inclusion probabilities are assigned on the transaction level, treating transactions with a high value and a low value the same, a transaction of $5,000 is equally likely to be selected as a transaction of $1,000. In *monetary unit sampling* (`units = "mus"`), inclusion probabilities are assigned on the level of individual monetary units (e.g., a dollar). When a dollar is selected to be in the sample, the transaction that includes that dollar is selected. This favors higher transactions, as a transaction of \$5,000 is five times more likely to be selected than a transaction of \$1,000. 
 
 Laura chooses to use *monetary unit sampling*, as she wants to include more high-valued transactions. The `selection()` function allows her to sample from the financial statements. She uses the `planningResult` object as an input for the `selection()` function.
 
 ```{r}
 # Step 2: Draw a sample from the financial statements.
-samplingResult <- selection(BuildIt, sampleSize = 164, units = "mus", bookValues = "bookValue")
+samplingResult <- selection(BuildIt, sampleSize = 190, units = "mus", bookValues = "bookValue")
 ```
 
 Laura can inspect the outcomes of her sampling procedure by using the `print()` function.
@@ -131,23 +101,18 @@ For this example, the audit values of the sample are already included in the `au
 
 ## Stage 4: Evaluating the sample
 
-Using her annotated sample, Laura can perform her inference with the `evaluation()` function. By passing the `priorResult` object to the function, she automatically sets `method = "binomial"` to be consistent with her prior distribution.
+Using her annotated sample, Laura can perform her inference with the `evaluation()` function.
 
 ```{r}
-# Step 4: Evaluate the sample.
-evaluationResult <- evaluation(confidence, materiality, sample = sample, bookValues = "bookValue", auditValues = "auditValue", prior = prior)
+# Step 4: Evaluate the sample
+evaluationResult <- evaluation(confidence, materiality, sample = sample, 
+                               bookValues = 'bookValue', auditValues = 'auditValue')
 ```
 
-Laura can inspect the outcomes of her inference by using the `print()` function. Her resulting upper bound is 2.378%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
+Laura can inspect the outcomes of her inference by using the `print()` function. Her resulting upper bound is 1.564%, which is lower than the materiality of 5%. The output tells Laura the correct conclusion immediately.
 
 ```{r}
 print(evaluationResult)
-```
-
-She can inspect the prior and posterior distribution by using the `plot()` function. The shaded area quantifies the area under the posterior distribution that contains 95% of the probability, which ends at 2.378%. Therefore, Laura can state that there is a 95% probability that the misstatement in BuildIt's statements is lower than 2.378%.
-
-```{r fig.align="center", fig.height=4, fig.width=6}
-plot(evaluationResult)
 ```
 
 ## Conclusion
